--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,28 @@
 
-  "SETTINGS" (module)
+  "INFRASTRUCUTRE"
+  * Write an overlay widget which will be placed over a form if initialisation goes wrong. Allow user to click to try again
+  * Write utility functions to copy data taken from a JsonRest query into a form
+  * Add the overlay widget to Dgrids as well, allowing users to re-load the dgrid if connection goes down
 
+  "SETTINGS" (module)
   * Write basic "settings" screen with sub-tabs where people can set things for their workspace. Decide on a few, generic, basic settings
   * Write basic "User settings" screen where people can update their info (Name, Photo, others).
   * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use the messages mixin for this
   * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on)
   * CLIENT: Make app look a little nicer (login button, small avatar, at the top, etc.)
 
+  "COMET" (module)
+  * Use comet/messenging to make stores observable by remote. Check that changes apply if 1) They are made within the tab 2) They are
+    made from another tab (through comet). Try this with settings (name)
+
+                          ----------------------------
+                          !!  READY FOR A USE CASE  !!
+                          ----------------------------
+
   "A WORKING USE CASE" (module)
 
-  * Add a "new contact" form, and a contacts browser. Add ability to type messages underneath it.
+  * Add a "new contact" form, and a contacts browser. Add ability to type messages underneath it. It all needs to work with
+    comet/etc.
 
   "MESSAGES AND INVITES" (module)
 
@@ -22,15 +35,11 @@
   * C/S   : Write an "invite user" mechanism where users can be invited into the system (they receive an email, will redirect to a screen
             which allows them to register a new user (if available, etc.) or link the workspace to their existing user. Good chance to
             write a bit of a wizard.
-  * CLIENT: Write a "message browser" grid for the workspace admin so that they can see exactly what was sent, when, and see the logs
+  * CLIENT: Write a "message browser" dgrid for the workspace admin so that they can see exactly what was sent, when, and see the logs
 
   "PERMISSIONS" (module)
   * Work on a permissions infrastructure so that users cannot just read everything. BASE it on hooks for user roles. Add error message
     in case user tries to access something that isn't theirs
-
-  "COMET" (module)
-  * Write a comet module that allows the receive "messages" from the application (using the standard protocol?)
-
 
   "DOCUMENTATION"
   * Comment each function, client and server, decide on a standard (probably node's)
