--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,19 @@
 
-  "INFRASTRUCUTRE"
+  "INFRASTRUCTURE"
 
   * Add the overlay widget to Dgrids as well, allowing users to re-load the dgrid if connection goes down
 
-  "SETTINGS"
+  "SETTINGS AND DATA MANAGEMENT"
 
-  * Write basic "settings" screen with sub-tabs where people can set things for their workspace. Decide on a few, generic, basic settings
-  * Write basic "User settings" screen where people can update their info (Name, Photo, others).
+  * Write basic "Workspace settings" (generic Workspace Settings table)
+  * Write basic "Workspace-User settings" (user's settings for that specific workspace)
+  * Write basic "User settings" (General user-wide settings)
+
   * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use the messages mixin for this
-  * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on)
-  * CLIENT: Make app look a little nicer (login button, small avatar, at the top, etc.)
+
+  * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on). Allow colour-codes.
+  * Make sure users can save line-records both on the spot, or with a "save" button. Not sure which one we will use.
+  * Add a form to Settings with the ability to pick one amongst one of the allowed line-record.
 
   "COMET"
 
@@ -25,7 +29,7 @@
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath it. It all needs to work with
     comet/etc.
 
-  "MESSAGES AND INVITES"
+  "EMAIL, SMSes, INVITES"
 
   * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the
     status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
@@ -36,7 +40,7 @@
   * Write an "invite user" mechanism where users can be invited into the system (they receive an email, will redirect to a screen
     which allows them to register a new user (if available, etc.) or link the workspace to their existing user. Good chance to
     write a bit of a wizard.
-  * Change "contact browser" so that it uses one of the sending subsystems to send messages, and an "inbox" system to match
+  * Change contact screen so that it uses one of the sending subsystems to send messages, and an "inbox" system to match
     incoming messages to contacts
  
 
@@ -48,19 +52,25 @@
   * Comment each function, client and server, decide on a standard (probably node's)
 
   "GET OPINIONS"
-  * GET somebody who knows what they are doing to look at all this
-    * MAYBE Have a "settings" infrastructure, where modules can define settings widgets which then get added to settings
+  * GET somebody who knows what they are doing to look at all this:
+
     * MAYBE Check if there is a better way to include modules, now each function needs to (because of async inits() )
     * MAYBE Move hotplate's defined stuff (`vars`, etc.) into its own namespace?
-    * MAYBE Check if coreAuth can be used for other systems (like passport, for example)
-    * MAYBE See if there is a better way to create "drivers" where "hooks" just don't cut it (see: authentication)
-    * MAYBE Check if there is a better way to "login", right now it sets a bunch of server variables
+    
+    * MAYBE (Login) Check if there is a better way to "login", right now it sets a bunch of server variables
+    * MAYBE (Login) Check if hotDojoAuth can be used for other systems (like passport, for example)
+    * MAYBE (Login/other) See if there is a better way to create "drivers" where "hooks" just don't cut it (see: authentication)
+    
     * MAYBE Add function to add per-module routes to make it easier to add URLs
-    * MAYBE Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
+
 
                           ----------------------------
                           !!  HOTPLATE IS FINISHED  !!
                           ----------------------------
+  "OPINIONS DECIDED"
+
+    * NO  Have a "settings" infrastructure, where modules can define settings widgets which then get added to settings
+    * NO Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
 
   The following is the short TODO list for my own booking system, which is what I was meant to start from day 1 (and was "slightly"
   side tracked by writing a "boilerplate"... err...)
@@ -216,3 +226,4 @@
             Improve logging accordingly (now that you can see them...)
   * Write utility functions to copy data taken from a JsonRest query into a form -- UNNECESSARY!
   * Write an overlay widget which will be placed over a form if initialisation goes wrong. Allow user to click to try again
+  * Make app look a little nicer (login button, small avatar, at the top, etc.)
