--- a/TODO.txt
+++ b/TODO.txt
@@ -1,26 +1,40 @@
 
   "SETTINGS AND DATA MANAGEMENT"
 
-  * Write basic "Workspace settings" (generic Workspace Settings table)
+  12/12/2012
   * Write basic "Workspace-User settings" (user's settings for that specific workspace). Make fields part of DojoAuth's tables? (Hooks for that)
-  * Write basic "User settings" (General user-wide settings). DojoAuth? (Hooks for that)
+  * Write basic "User settings" (General user-wide settings) and show name at the top. DojoAuth? (Hooks for that)
 
-  * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use the messages mixin for this
+  13/12/2012
+  * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use Hotplate's Dojo mixin for this
 
+  14/12/2012, 15/12/2012, 16/12/2012
   * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on). Allow colour-codes.
-  * Make sure users can save line-records both on the spot, or with a "save" button. Not sure which one we will use.
+    Make sure users can save line-records both on the spot, or with a "save" button. Not sure which one we will use.
   * Add a form to Settings with the ability to pick one amongst one of the allowed line-record -- PLUS the current one!
+
+  17/12/2012
+  * Make sure that changing a list in point A will also change the select box in point B immediately.
 
   "COMET AND CHANGES"
 
+  18/12/2012, 19/12/2012
   * Use comet/messenging to make stores observable by remote. Check that changes apply if 1) They are made within the tab 2) They are
-    made from another tab (through comet). Try this with settings (name)
+    made from another tab (through comet).
 
   "PERMISSIONS"
+
+  20/12/2012
+  * Make sure that non-admin users cannot edit the workspace settings. To do this, modify the table from DojoAuth (Add users by hand for now)
+
+  21/12/2012
   * Work on a permissions infrastructure so that users cannot just read everything. BASE it on hooks for user roles. Add error message
     in case user tries to access something that isn't theirs
 
+
   "LOOK"
+
+  22/12/2012
   * Improve the look of widgets: Overlay with reload icon, top bar with shade, etc.
 
                           ----------------------------
@@ -30,7 +44,7 @@
   "A WORKING USE CASE"
 
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath it. It all needs to work with
-    comet/etc.
+    comet/etc. (if somebody else adds a comment, animate the "appearance" of the new comment)
 
   "MESSENGING"
 
@@ -48,7 +62,7 @@
 
   * Change contact screen so that it uses one of the sending subsystems to send messages, and an "inbox" system to match
     incoming messages to contacts
-  * Make a "case": an abstract entity with a name and a bunch of people attached. When an email comes in, match it to a case
+  * Make an "event": an abstract entity with a name and a bunch of people attached. When an email comes in, match it to a case
 
 
   "DOCUMENTATION"
@@ -81,9 +95,10 @@
   side tracked by writing a "boilerplate"... err...)
 
   PHASE 1: Information
+  * Ability to set, for each booking type, a "guest type" (dancer, security, paying guest)
   * Ability to set products for each contact (hourly rate, once-off, commission-only allowed, restrict who can buy/offer it,
-    money range: from/to booking owner, from/to person, that's it )
-  * Ability to create bookings. For each person added, [ product, quantity, $ from/to booking owner, $ from/to person ]
+    money range: from/to booking owner, from/to person, tangible/intangible, that's it )
+  * Ability to create events. For each person added, [ product, quantity, $ from/to booking owner, $ from/to person, from, to ]
   * Ability to match incoming (and outgoing) messages to bookings from inbox
 
   PHASE 2: Money/billing
@@ -241,3 +256,4 @@
   * Make app look a little nicer (login button, small avatar, at the top, etc.)
   * Add the overlay widget to Dgrids as well, allowing users to re-load the dgrid if connection goes down. That was fun, discovering that
     dgrid isn't _actually_ a widget and adapting the hell out of _OvelayMixin...
+  * Write basic "Workspace settings" (generic Workspace Settings table)
