--- a/TODO.txt
+++ b/TODO.txt
@@ -1,39 +1,39 @@
 
   "SETTINGS AND DATA MANAGEMENT"
 
-  16/12/2012
+  5/1/2013, 6/1/2013
   * Strenghten existing forms in bd.js (add parametersAreThere as general functions from hotDojoAuth), validate email
   * Write basic "User settings" (General user-wide settings) and show name of logged in user at the top
   * Add a way to set a gravatar link (make a gravatar widget!)
 
-  17/12/2012
+  7/1/2013
   * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use Hotplate's Dojo mixin for this
 
-  18/12/2012, 19/12/2012, 20/12/2012
+  8/1/2013, 9/1/2013, 10/1/2013
   * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on). Allow colour-codes.
   * Add a form to Settings with the ability to pick one amongst one of the allowed line-record -- PLUS the current one!
 
-  21/12/2012
+  11/1/2013
   * Make sure that changing a list in point A will also change the select box in point B immediately.
 
   "COMET AND CHANGES"
 
-  18/12/2012, 19/12/2012
+  14/1/2013, 15/1/2013
   * Use comet/messenging to make stores observable by remote. Check that changes apply if 1) They are made within the tab 2) They are
     made from another tab (through comet).
 
   "PERMISSIONS"
 
-  20/12/2012
+  16/1/2013
   * Make sure that non-admin users cannot edit the workspace settings. To do this, modify the table from DojoAuth (Add users by hand for now)
 
-  21/12/2012
+  17/1/2013
   * Work on a permissions infrastructure so that users cannot just read everything. BASE it on hooks for user roles. Add error message
     in case user tries to access something that isn't theirs
 
   "LOOK"
 
-  22/12/2012
+  18/1/2012
   * Improve the look of widgets: Overlay with reload icon, top bar with shade, etc.
 
                           ----------------------------
@@ -45,10 +45,13 @@
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath it. It all needs to work with
     comet/etc. (if somebody else adds a comment, animate the "appearance" of the new comment)
 
-  "MESSENGING"
+  "MESSENGING INFRASTRUCTURE"
 
   * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the
     status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
+
+
+  "USERS MANAGEMENT AND INVITES"
   * Write the password recovery script: work out accounts linked, sets a hash for each one, sends email out with a change password
     link and a list of workspaces attached. NOTE: the change password link should be a simple form, which then redirects to /login
     which in turns should output the list of workspaces (since the user is already logged in)
@@ -56,8 +59,9 @@
   * Write an "invite user" mechanism where users can be invited into the system (they receive an email, will redirect to a screen
     which allows them to register a new user (if available, etc.) or link the workspace to their existing user. Good chance to
     write a bit of a wizard.
+  * Add a "user management" section in settings for Admins only
 
-  " THE INBOX"
+  "THE INBOX"
 
   * Change contact screen so that it uses one of the sending subsystems to send messages, and an "inbox" system to match
     incoming messages to contacts
@@ -94,7 +98,7 @@
   side tracked by writing a "boilerplate"... err...)
 
   PHASE 1: Information
-  * Ability to set "presence types" (dancer, security, paying guest)
+  * Ability to set "presence types" (dancer, security, paying guest) -- presentational only
   * Ability to set products for each contact (hourly rate, once-off, commission-only allowed, restrict who can buy/offer it,
     money range: from/to booking owner, from/to person, tangible/intangible, tax rate, that's it )
   * Ability to create events. For each person added, [ product, quantity, $ from/to booking owner, $ from/to person, from, to ]
