--- a/TODO.txt
+++ b/TODO.txt
@@ -1,38 +1,32 @@
 
   "SETTINGS AND DATA MANAGEMENT"
 
-  6/1/2013
-  * Write basic "User settings" (General user-wide settings) and show name of logged in user at the top
 
-  7/1/2013
-  * Add a way to set a gravatar link (make a gravatar widget!)
+  * Get rid of that stupid "self" in the user config. Use the proper user _id. Check permissions with quick permission module
+  * Change the protocol (sigh). Any get needs to return just the object. Maybe sendGetResponse, sendPostResponse? 
+
   * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces. Use Hotplate's Dojo mixin for this
+  * Add name and Last Name to the form, assign it to the settings section with the hook
 
-  8/1/2013, 9/1/2013, 10/1/2013
   * Write a widget that allows users to create line-records and edit them (account types, booking types, and so on). Allow colour-codes.
   * Add a form to Settings with the ability to pick one amongst one of the allowed line-record -- PLUS the current one!
 
-  11/1/2013
   * Make sure that changing a list in point A will also change the select box in point B immediately.
 
   "COMET AND CHANGES"
 
-  14/1/2013, 15/1/2013
   * Use comet/messenging to make stores observable by remote. Check that changes apply if 1) They are made within the tab 2) They are
     made from another tab (through comet).
 
   "PERMISSIONS"
 
-  16/1/2013
   * Make sure that non-admin users cannot edit the workspace settings. To do this, modify the table from DojoAuth (Add users by hand for now)
 
-  17/1/2013
   * Work on a permissions infrastructure so that users cannot just read everything. BASE it on hooks for user roles. Add error message
     in case user tries to access something that isn't theirs
 
   "LOOK"
 
-  18/1/2012
   * Improve the look of widgets: Overlay with reload icon, top bar with shade, etc.
 
                           ----------------------------
@@ -262,3 +256,4 @@
   * Write generic function to find one and save
   * Write basic "Workspace-User settings" (user's settings for that specific workspace). Make fields part of DojoAuth's tables? (Hooks for that)
   * Strenghten existing forms in bd.js (add parametersAreThere as general functions from hotDojoAuth), validate email
+  * Write basic "User settings" (General user-wide settings) and show name of logged in user at the top
